--- a/UI/MapControlSample/MapControlSample/MapControlSample.iOS/MapControlSample.iOS.csproj
+++ b/UI/MapControlSample/MapControlSample/MapControlSample.iOS/MapControlSample.iOS.csproj
@@ -9,8 +9,7 @@
     <RootNamespace>MapControlSample</RootNamespace>
     <IPhoneResourcePrefix>Resources</IPhoneResourcePrefix>
     <AssemblyName>MapControlSample</AssemblyName>
-    <NuGetPackageImportStamp>
-    </NuGetPackageImportStamp>
+    <NuGetPackageImportStamp></NuGetPackageImportStamp>
     <ResourcesDirectory>..\MapControlSample.Shared\Strings</ResourcesDirectory>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|iPhoneSimulator' ">
@@ -99,10 +98,13 @@
     <Reference Include="Xamarin.iOS" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Uno.UI" Version="2.4.4" />
     <PackageReference Include="Uno.UI.Maps">
-      <Version>2.4.4</Version>
+      <Version>3.0.17</Version>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
+    <PackageReference Include="Uno.UI" Version="3.0.17" />
+    <PackageReference Include="Uno.UI.RemoteControl" Version="3.0.17" Condition="'$(Configuration)'=='Debug'" />
   </ItemGroup>
   <Import Project="..\MapControlSample.Shared\MapControlSample.Shared.projitems" Label="Shared" Condition="Exists('..\MapControlSample.Shared\MapControlSample.Shared.projitems')" />
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
