--- a/UI/SkiaSharpTest/SkiaSharpTest/SkiaSharpTest.Droid/SkiaSharpTest.Droid.csproj
+++ b/UI/SkiaSharpTest/SkiaSharpTest/SkiaSharpTest.Droid/SkiaSharpTest.Droid.csproj
@@ -60,9 +60,12 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Uno.SkiaSharp.Views">
-      <Version>1.68.0-uno.293</Version>
+      <Version>2.80.0-uno.483</Version>
     </PackageReference>
-    <PackageReference Include="Uno.UI" Version="2.3.0-dev.90" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
+    <PackageReference Include="Uno.UI" Version="3.0.17" />
+    <PackageReference Include="Uno.UI.RemoteControl" Version="3.0.17" Condition="'$(Configuration)'=='Debug'" />
     <PackageReference Include="Uno.UniversalImageLoader" Version="1.9.32" />
   </ItemGroup>
   <ItemGroup>
