--- a/UI/AutoSuggestSample/AutoSuggestSample/AutoSuggestSample.UWP/AutoSuggestSample.UWP.csproj
+++ b/UI/AutoSuggestSample/AutoSuggestSample/AutoSuggestSample.UWP/AutoSuggestSample.UWP.csproj
@@ -5,6 +5,10 @@
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>5.2.4</Version>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
+    <PackageReference Include="Uno.Core" Version="2.0.0" />
+    <PackageReference Include="Uno.UI" Version="3.0.17" />
   </ItemGroup>
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
