--- a/UI/AutoSuggestSample/AutoSuggestSample/AutoSuggestSample.Wasm/AutoSuggestSample.Wasm.csproj
+++ b/UI/AutoSuggestSample/AutoSuggestSample/AutoSuggestSample.Wasm/AutoSuggestSample.Wasm.csproj
@@ -1,46 +1,39 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
-	<PropertyGroup>
-		<OutputType>Exe</OutputType>
-		<TargetFramework>netstandard2.0</TargetFramework>
-		<WasmHead>true</WasmHead>
-		<DefineConstants>$(DefineConstants);__WASM__</DefineConstants>
-		<NoWarn>NU1701</NoWarn>
-	</PropertyGroup>
-
-	<ItemGroup>
-		<Content Include="..\AutoSuggestSample.UWP\Assets\*.png" Link="Assets\%(FileName)%(Extension)" />
-		<Content Include="Fonts\winjs-symbols.woff2" />
-	</ItemGroup>
-
-	<ItemGroup>
-		<EmbeddedResource Include="WasmCSS\Fonts.css" />
-		<EmbeddedResource Include="WasmScripts\AppManifest.js" />
-	</ItemGroup>
-
-	<ItemGroup>
-		<LinkerDescriptor Include="LinkerConfig.xml" />
-	</ItemGroup>
-	
-	<ItemGroup>
-		<!-- 
+  <PropertyGroup>
+    <OutputType>Exe</OutputType>
+    <TargetFramework>netstandard2.0</TargetFramework>
+    <DefineConstants>$(DefineConstants);__WASM__</DefineConstants>
+    <NoWarn>NU1701</NoWarn>
+  </PropertyGroup>
+  <ItemGroup>
+    <Content Include="..\AutoSuggestSample.UWP\Assets\*.png" Link="Assets\%(FileName)%(Extension)" />
+    <Content Include="Fonts\winjs-symbols.woff2" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="WasmCSS\Fonts.css" />
+    <EmbeddedResource Include="WasmScripts\AppManifest.js" />
+  </ItemGroup>
+  <ItemGroup>
+    <LinkerDescriptor Include="LinkerConfig.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <!-- 
     This item group is required by the project templace because of the
     new SDK-Style project, otherwise some files are not aded automatically.
     
     You can safely this ItemGroup completely.
     -->
-		<Compile Remove="Program.cs" />
-		<Compile Include="Program.cs" />
-		<Content Include="LinkerConfig.xml" />
-	</ItemGroup>
-
-	<ItemGroup>
-		<PackageReference Include="Uno.UI" Version="2.3.0-dev.80" />
-		<PackageReference Include="Uno.Wasm.Bootstrap" Version="1.2.0-dev.29" />
-		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1" />
-		<PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
-	</ItemGroup>
-
-	<Import Project="..\AutoSuggestSample.Shared\AutoSuggestSample.Shared.projitems" Label="Shared" Condition="Exists('..\AutoSuggestSample.Shared\AutoSuggestSample.Shared.projitems')" />
-
+    <Compile Remove="Program.cs" />
+    <Compile Include="Program.cs" />
+    <Content Include="LinkerConfig.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
+    <PackageReference Include="Uno.UI.WebAssembly" Version="3.0.17" />
+    <PackageReference Include="Uno.UI.RemoteControl" Version="3.0.17" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.Wasm.Bootstrap" Version="1.3.4" />
+    <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="1.3.4" />
+  </ItemGroup>
+  <Import Project="..\AutoSuggestSample.Shared\AutoSuggestSample.Shared.projitems" Label="Shared" Condition="Exists('..\AutoSuggestSample.Shared\AutoSuggestSample.Shared.projitems')" />
 </Project>
