--- a/UI/AutoSuggestSample/AutoSuggestSample/AutoSuggestSample.iOS/AutoSuggestSample.iOS.csproj
+++ b/UI/AutoSuggestSample/AutoSuggestSample/AutoSuggestSample.iOS/AutoSuggestSample.iOS.csproj
@@ -9,8 +9,7 @@
     <RootNamespace>AutoSuggestSample.iOS</RootNamespace>
     <IPhoneResourcePrefix>Resources</IPhoneResourcePrefix>
     <AssemblyName>AutoSuggestSample.iOS</AssemblyName>
-    <NuGetPackageImportStamp>
-    </NuGetPackageImportStamp>
+    <NuGetPackageImportStamp></NuGetPackageImportStamp>
     <ResourcesDirectory>..\AutoSuggestSample.Shared\Strings</ResourcesDirectory>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|iPhoneSimulator' ">
@@ -99,9 +98,10 @@
     <Reference Include="Xamarin.iOS" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Uno.UI">
-      <Version>2.3.0-dev.80</Version>
-    </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
+    <PackageReference Include="Uno.UI" Version="3.0.17" />
+    <PackageReference Include="Uno.UI.RemoteControl" Version="3.0.17" Condition="'$(Configuration)'=='Debug'" />
   </ItemGroup>
   <Import Project="..\AutoSuggestSample.Shared\AutoSuggestSample.Shared.projitems" Label="Shared" Condition="Exists('..\AutoSuggestSample.Shared\AutoSuggestSample.Shared.projitems')" />
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
