--- a/UI/Benchmark/AppBenchmark/AppBenchmark.Droid/AppBenchmark.Droid.csproj
+++ b/UI/Benchmark/AppBenchmark/AppBenchmark.Droid/AppBenchmark.Droid.csproj
@@ -73,11 +73,11 @@
     <PackageReference Include="BenchmarkDotNet.Annotations">
       <Version>0.11.4-develop</Version>
     </PackageReference>
-    <PackageReference Include="Uno.UI" Version="2.3.0-dev.11" />
-    <PackageReference Include="Uno.UI.RemoteControl" Version="2.3.0-dev.11" Condition="'$(Configuration)'=='Debug'" />
-    <PackageReference Include="Uno.UniversalImageLoader" Version="1.9.32" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
+    <PackageReference Include="Uno.UI" Version="3.0.17" />
+    <PackageReference Include="Uno.UI.RemoteControl" Version="3.0.17" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.UniversalImageLoader" Version="1.9.32" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
