--- a/UI/Benchmark/AppBenchmark/AppBenchmark.Wasm/AppBenchmark.Wasm.csproj
+++ b/UI/Benchmark/AppBenchmark/AppBenchmark.Wasm/AppBenchmark.Wasm.csproj
@@ -1,13 +1,11 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <WasmHead>true</WasmHead>
     <DefineConstants>$(DefineConstants);__WASM__</DefineConstants>
     <NoWarn>NU1701</NoWarn>
-		<!--<WasmShellMonoRuntimeExecutionMode>InterpreterAndAOT</WasmShellMonoRuntimeExecutionMode>-->
-	</PropertyGroup>
+    <!--<WasmShellMonoRuntimeExecutionMode>InterpreterAndAOT</WasmShellMonoRuntimeExecutionMode>-->
+  </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)'=='Debug'">
     <MonoRuntimeDebuggerEnabled>true</MonoRuntimeDebuggerEnabled>
     <DefineConstants>$(DefineConstants);TRACE;DEBUG</DefineConstants>
@@ -21,12 +19,12 @@
     <EmbeddedResource Include="WasmCSS\Fonts.css" />
     <EmbeddedResource Include="WasmScripts\AppManifest.js" />
   </ItemGroup>
-	<ItemGroup>
-		<MonoRuntimeMixedModeExcludedAssembly Include="Microsoft.CodeAnalysis " />
-		<MonoRuntimeMixedModeExcludedAssembly Include="Microsoft.CodeAnalysis.CSharp " />
-		<MonoRuntimeMixedModeExcludedAssembly Include="BenchmarkDotNet " />
-	</ItemGroup>
-	<ItemGroup>
+  <ItemGroup>
+    <MonoRuntimeMixedModeExcludedAssembly Include="Microsoft.CodeAnalysis " />
+    <MonoRuntimeMixedModeExcludedAssembly Include="Microsoft.CodeAnalysis.CSharp " />
+    <MonoRuntimeMixedModeExcludedAssembly Include="BenchmarkDotNet " />
+  </ItemGroup>
+  <ItemGroup>
     <LinkerDescriptor Include="LinkerConfig.xml" />
   </ItemGroup>
   <ItemGroup>
@@ -42,14 +40,14 @@
   </ItemGroup>
   <ItemGroup>
     <!-- Note that for WebAssembly version 1.1.1 of the console logger required -->
+    <PackageReference Include="BenchmarkDotNet" Version="0.11.4-develop" />
+    <PackageReference Include="BenchmarkDotNet.Annotations" Version="0.11.4-develop" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
-    <PackageReference Include="Uno.UI" Version="2.3.0-dev.11" />
-    <PackageReference Include="Uno.UI.RemoteControl" Version="2.2.0" Condition="'$(Configuration)'=='Debug'" />
-    <PackageReference Include="Uno.Wasm.Bootstrap" Version="1.2.0-dev.18" />
-    <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="1.2.0-dev.18" />
-		<PackageReference Include="BenchmarkDotNet" Version="0.11.4-develop" />
-		<PackageReference Include="BenchmarkDotNet.Annotations" Version="0.11.4-develop" />
-	</ItemGroup>
+    <PackageReference Include="Uno.UI.WebAssembly" Version="3.0.17" />
+    <PackageReference Include="Uno.UI.RemoteControl" Version="3.0.17" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.Wasm.Bootstrap" Version="1.3.4" />
+    <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="1.3.4" />
+  </ItemGroup>
   <Import Project="..\AppBenchmark.Shared\AppBenchmark.Shared.projitems" Label="Shared" Condition="Exists('..\AppBenchmark.Shared\AppBenchmark.Shared.projitems')" />
 </Project>
