--- a/UI/ChatSignalR/UnoChat.Client/UnoChat.Client.UWP/UnoChat.Client.UWP.csproj
+++ b/UI/ChatSignalR/UnoChat.Client/UnoChat.Client.UWP/UnoChat.Client.UWP.csproj
@@ -13,8 +13,6 @@
 			-->
       <Version>6.2.2</Version>
     </PackageReference>
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
     <PackageReference Include="Microsoft.Toolkit.Uwp.UI.Lottie">
       <Version>6.1.0</Version>
     </PackageReference>
@@ -24,7 +22,10 @@
     <PackageReference Include="MVx.Observable">
       <Version>2.0.0</Version>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
     <PackageReference Include="Uno.Core" Version="2.0.0" />
+    <PackageReference Include="Uno.UI" Version="3.0.17" />
   </ItemGroup>
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
