--- a/UI/ChatSignalR/UnoChat.Client/UnoChat.Client.Wasm/UnoChat.Client.Wasm.csproj
+++ b/UI/ChatSignalR/UnoChat.Client/UnoChat.Client.Wasm/UnoChat.Client.Wasm.csproj
@@ -1,5 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -37,14 +36,14 @@
   <ItemGroup>
     <!-- Note that for WebAssembly version 1.1.1 of the console logger required -->
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="3.1.6" />
+    <PackageReference Include="MVx.Observable" Version="2.0.0" />
+    <PackageReference Include="Uno.UI.Lottie" Version="3.0.17" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
-    <PackageReference Include="MVx.Observable" Version="2.0.0" />
-    <PackageReference Include="Uno.UI.WebAssembly" Version="3.0.0-dev.1551" />
-    <PackageReference Include="Uno.UI.Lottie" Version="3.0.0-dev.1551" />
-    <PackageReference Include="Uno.UI.RemoteControl" Version="3.0.0-dev.1551" Condition="'$(Configuration)'=='Debug'" />
-    <PackageReference Include="Uno.Wasm.Bootstrap" Version="1.4.0-dev.24" />
-    <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="1.4.0-dev.24" />
+    <PackageReference Include="Uno.UI.WebAssembly" Version="3.0.17" />
+    <PackageReference Include="Uno.UI.RemoteControl" Version="3.0.17" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.Wasm.Bootstrap" Version="1.3.4" />
+    <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="1.3.4" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Animations\" />
