--- a/UI/ChatSignalR/UnoChat.Client/UnoChat.Client.iOS/UnoChat.Client.iOS.csproj
+++ b/UI/ChatSignalR/UnoChat.Client/UnoChat.Client.iOS/UnoChat.Client.iOS.csproj
@@ -9,8 +9,7 @@
     <RootNamespace>UnoChat.Client</RootNamespace>
     <IPhoneResourcePrefix>Resources</IPhoneResourcePrefix>
     <AssemblyName>UnoChat.Client</AssemblyName>
-    <NuGetPackageImportStamp>
-    </NuGetPackageImportStamp>
+    <NuGetPackageImportStamp></NuGetPackageImportStamp>
     <ResourcesDirectory>..\UnoChat.Client.Shared\Strings</ResourcesDirectory>
     <LangVersion>8.0</LangVersion>
     <ProvisioningType>manual</ProvisioningType>
@@ -129,13 +128,13 @@
     <PackageReference Include="MVx.Observable">
       <Version>2.0.0</Version>
     </PackageReference>
-    <PackageReference Include="Uno.UI" Version="3.0.0-dev.1551" />
     <PackageReference Include="Uno.UI.Lottie">
-      <Version>3.0.0-dev.1551</Version>
+      <Version>3.0.17</Version>
     </PackageReference>
-    <PackageReference Include="Uno.UI.RemoteControl" Version="3.0.0-dev.1551" Condition="'$(Configuration)'=='Debug'" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
+    <PackageReference Include="Uno.UI" Version="3.0.17" />
+    <PackageReference Include="Uno.UI.RemoteControl" Version="3.0.17" Condition="'$(Configuration)'=='Debug'" />
   </ItemGroup>
   <ItemGroup>
     <ImageAsset Include="Media.xcassets\AppIcons.appiconset\Contents.json">
