--- a/UI/NativeStylesSwitch/NativeStylesSwitch.UWP/NativeStylesSwitch.UWP.csproj
+++ b/UI/NativeStylesSwitch/NativeStylesSwitch.UWP/NativeStylesSwitch.UWP.csproj
@@ -12,7 +12,8 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
-    <PackageReference Include="Uno.Core" Version="1.29.0" />
+    <PackageReference Include="Uno.Core" Version="2.0.0" />
+    <PackageReference Include="Uno.UI" Version="3.0.17" />
   </ItemGroup>
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
