--- a/UI/SkiaSharpTest/SkiaSharpTest/SkiaSharpTest.UWP/SkiaSharpTest.UWP.csproj
+++ b/UI/SkiaSharpTest/SkiaSharpTest/SkiaSharpTest.UWP/SkiaSharpTest.UWP.csproj
@@ -16,6 +16,10 @@
     <PackageReference Include="SkiaSharp.Views">
       <Version>1.68.0</Version>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
+    <PackageReference Include="Uno.Core" Version="2.0.0" />
+    <PackageReference Include="Uno.UI" Version="3.0.17" />
   </ItemGroup>
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
