--- a/UI/SkiaSharpTest/SkiaSharpTest/SkiaSharpTest.Wasm/SkiaSharpTest.Wasm.csproj
+++ b/UI/SkiaSharpTest/SkiaSharpTest/SkiaSharpTest.Wasm/SkiaSharpTest.Wasm.csproj
@@ -1,14 +1,12 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <WasmHead>true</WasmHead>
     <DefineConstants>$(DefineConstants);__WASM__</DefineConstants>
     <NoWarn>NU1701</NoWarn>
     <MonoRuntimeDebuggerEnabled Condition="'$(Configuration)'=='Debug'">true</MonoRuntimeDebuggerEnabled>
-		<WasmShellMonoRuntimeExecutionMode Condition="'$(Configuration)'=='Release'">InterpreterAndAOT</WasmShellMonoRuntimeExecutionMode>
-	</PropertyGroup>
+    <WasmShellMonoRuntimeExecutionMode Condition="'$(Configuration)'=='Release'">InterpreterAndAOT</WasmShellMonoRuntimeExecutionMode>
+  </PropertyGroup>
   <ItemGroup>
     <Content Include="..\SkiaSharpTest.UWP\Assets\*.png" Link="Assets\%(FileName)%(Extension)" />
     <Content Include="Fonts\winjs-symbols.woff2" />
@@ -20,13 +18,11 @@
   <ItemGroup>
     <LinkerDescriptor Include="LinkerConfig.xml" />
   </ItemGroup>
-	
-	<ItemGroup>
-		<!-- Required to enable IDBFS (https://github.com/emscripten-core/emscripten/blob/d2148d096e2b5f3ec4886f93e24312ef88976020/ChangeLog.md#v1391-10302019) -->
-		<WasmShellExtraEmccFlags Include="-lidbfs.js" />
-	</ItemGroup>
-
-	<ItemGroup>
+  <ItemGroup>
+    <!-- Required to enable IDBFS (https://github.com/emscripten-core/emscripten/blob/d2148d096e2b5f3ec4886f93e24312ef88976020/ChangeLog.md#v1391-10302019) -->
+    <WasmShellExtraEmccFlags Include="-lidbfs.js" />
+  </ItemGroup>
+  <ItemGroup>
     <!-- 
     This item group is required by the project templace because of the
     new SDK-Style project, otherwise some files are not aded automatically.
@@ -38,12 +34,14 @@
     <Content Include="LinkerConfig.xml" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Uno.SkiaSharp.Views" Version="2.80.0-uno.483" />
+    <PackageReference Include="Uno.SkiaSharp.Wasm" Version="2.80.0-uno.483" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
-    <PackageReference Include="Uno.SkiaSharp.Views" Version="1.68.0-uno.293" />
-    <PackageReference Include="Uno.SkiaSharp.Wasm" Version="1.68.0-uno.293" />
-    <PackageReference Include="Uno.UI" Version="2.3.0-dev.90" />
-    <PackageReference Include="Uno.Wasm.Bootstrap" Version="1.2.0-dev.29" />
+    <PackageReference Include="Uno.UI.WebAssembly" Version="3.0.17" />
+    <PackageReference Include="Uno.UI.RemoteControl" Version="3.0.17" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.Wasm.Bootstrap" Version="1.3.4" />
+    <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="1.3.4" />
   </ItemGroup>
   <Import Project="..\SkiaSharpTest.Shared\SkiaSharpTest.Shared.projitems" Label="Shared" Condition="Exists('..\SkiaSharpTest.Shared\SkiaSharpTest.Shared.projitems')" />
 </Project>
