--- a/UI/UnoWCTDataGridSample/WCTTestbed2/WCTTestbed2.UWP/WCTTestbed2.UWP.csproj
+++ b/UI/UnoWCTDataGridSample/WCTTestbed2/WCTTestbed2.UWP/WCTTestbed2.UWP.csproj
@@ -10,15 +10,16 @@
 			-->
       <Version>6.2.2</Version>
     </PackageReference>
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
     <PackageReference Include="Microsoft.Toolkit.Uwp">
-      <Version>6.0.0</Version>
+      <Version>6.1.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Toolkit.Uwp.UI.Controls.DataGrid">
-      <Version>6.0.0</Version>
+      <Version>6.1.0</Version>
     </PackageReference>
-    <PackageReference Include="Uno.Core" Version="1.29.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
+    <PackageReference Include="Uno.Core" Version="2.0.0" />
+    <PackageReference Include="Uno.UI" Version="3.0.17" />
   </ItemGroup>
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
