--- a/UI/WCTTabView/TabViewSample/TabViewSample.iOS/TabViewSample.iOS.csproj
+++ b/UI/WCTTabView/TabViewSample/TabViewSample.iOS/TabViewSample.iOS.csproj
@@ -9,8 +9,7 @@
     <RootNamespace>TabViewSample</RootNamespace>
     <IPhoneResourcePrefix>Resources</IPhoneResourcePrefix>
     <AssemblyName>TabViewSample</AssemblyName>
-    <NuGetPackageImportStamp>
-    </NuGetPackageImportStamp>
+    <NuGetPackageImportStamp></NuGetPackageImportStamp>
     <ResourcesDirectory>..\TabViewSample.Shared\Strings</ResourcesDirectory>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|iPhoneSimulator' ">
@@ -116,12 +115,12 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Uno.Microsoft.Toolkit.Uwp.UI.Controls">
-      <Version>6.1.0-build.178.gc768b0f669</Version>
+      <Version>6.1.0-build.191.gc988bdd4ff</Version>
     </PackageReference>
-    <PackageReference Include="Uno.UI" Version="3.0.0-dev.636" />
-    <PackageReference Include="Uno.UI.RemoteControl" Version="3.0.0-dev.636" Condition="'$(Configuration)'=='Debug'" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
+    <PackageReference Include="Uno.UI" Version="3.0.17" />
+    <PackageReference Include="Uno.UI.RemoteControl" Version="3.0.17" Condition="'$(Configuration)'=='Debug'" />
   </ItemGroup>
   <ItemGroup>
     <ImageAsset Include="Media.xcassets\AppIcons.appiconset\Contents.json">
