--- a/UI/ToyCar/ToyCar.iOS/ToyCar.iOS.csproj
+++ b/UI/ToyCar/ToyCar.iOS/ToyCar.iOS.csproj
@@ -116,10 +116,10 @@
     <BundleResource Include="Resources\Fonts\winjs-symbols.ttf" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Uno.UI" Version="3.1.0-dev.271" />
+    <PackageReference Include="Uno.UI.RemoteControl" Version="3.1.0-dev.271" Condition="'$(Configuration)'=='Debug'" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
-    <PackageReference Include="Uno.UI" Version="3.0.17" />
-    <PackageReference Include="Uno.UI.RemoteControl" Version="3.0.17" Condition="'$(Configuration)'=='Debug'" />
   </ItemGroup>
   <ItemGroup>
     <ImageAsset Include="Media.xcassets\AppIcons.appiconset\Contents.json">
