--- a/UI/ToyCar/ToyCar.macOS/ToyCar.macOS.csproj
+++ b/UI/ToyCar/ToyCar.macOS/ToyCar.macOS.csproj
@@ -61,10 +61,10 @@
     <Reference Include="System.Memory" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Uno.UI" Version="3.1.0-dev.271" />
+    <PackageReference Include="Uno.UI.RemoteControl" Version="3.1.0-dev.271" Condition="'$(Configuration)'=='Debug'" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
-    <PackageReference Include="Uno.UI" Version="3.0.17" />
-    <PackageReference Include="Uno.UI.RemoteControl" Version="3.0.17" Condition="'$(Configuration)'=='Debug'" />
   </ItemGroup>
   <Import Project="..\ToyCar.Shared\ToyCar.Shared.projitems" Label="Shared" Condition="Exists('..\ToyCar.Shared\ToyCar.Shared.projitems')" />
   <ItemGroup>
